# Marketing-team-AI-Agent

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  render.yaml
data/: sample_campaign.csv
scripts/: build_ai_pm_interview_doc.py  build_project_technical_doc.py
server/: __init__.py  auth.py  clarify.py  db.py  embeddings.py  im_hub.py  image_processing.py  image_serve.py  kb_retrieval.py  llm.py  main.py  marketing_skills.py  memory.py  memory_extraction.py  news.py  query_rewrite.py  reranker.py  routes.py  sessions.py  streaming.py  uploads.py
skills/competitive-positioning-brief/: SKILL.md
skills/product-launch-campaign/: SKILL.md
src/marketing_agent/: __init__.py  cli.py  config.py  conversation.py  file_inputs.py  orchestrator.py  source_scoring.py
tests/: __init__.py  test_analytics_agent.py  test_approvals.py  test_clarify.py  test_contacts.py  test_content_skills.py  test_im.py  test_image.py  test_kb_retrieval.py  test_memory_extraction.py  test_news.py  test_oa_copilot.py  test_oa_modules.py  test_orchestrator.py  test_org.py  test_pdf_tool.py  test_routes.py  test_sessions.py  test_source_scoring.py
web/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vercel.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: approvals-panel.tsx  auth-ui.tsx  calendar-panel.tsx  chat-panel.tsx  citation-markdown.tsx  contacts-panel.tsx  context-menu.tsx  datetime-wheel.tsx  dialogs.tsx  example-prompts.tsx  file-uploader.tsx  header-calendar.tsx  image-edit-view.tsx  image-panel.tsx  image-source-choice.tsx  image-templates-modal.tsx  kb-manager.tsx  kb-panel.tsx  message.tsx  messages-panel.tsx  modal.tsx  news-panel.tsx  oa-draft-card.tsx  oa-panel.tsx  preview-panel.tsx  session-sidebar.tsx  (+5 more)
(+28 files in other folders)
