[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marketing-agent"
version = "0.1.0"
description = "Enterprise marketing team efficiency AI Agent (MVP) — multi-agent system on the Anthropic SDK."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.45.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.0",
    "python-multipart>=0.0.12",
]

[project.scripts]
marketing-agent = "marketing_agent.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
