[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marketing-agent"
version = "0.1.0"
description = "Enterprise marketing team efficiency AI Agent (MVP) — multi-agent system on the Anthropic SDK."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.45.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.0",
    "python-multipart>=0.0.12",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "reportlab>=4.0.0",
    "google-genai>=0.3.0",
    "Pillow>=10.0.0",
    "rembg>=2.0.50",
    "onnxruntime>=1.17.0",
]

[project.optional-dependencies]
# Local semantic retrieval for the knowledge base (heavy: pulls torch). The app
# degrades to lexical retrieval when these are not installed.
semantic = [
    "sentence-transformers>=2.2.0",
]

[project.scripts]
marketing-agent = "marketing_agent.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
